--- a/3. Feature Engineering of the target variable.ipynb
+++ b/3. Feature Engineering of the target variable.ipynb
@@ -42,24 +42,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from xgboost import XGBClassifier\n",
-    "# from sklearn.metrics import roc_auc_score\n",
-    "# from sklearn.metrics import mean_absolute_error\n",
-    "# from catboost import CatBoostClassifier, Pool\n",
-    "# from keras.models import Sequential\n",
-    "# from keras.layers import Dense, Activation, Dropout\n",
-    "# import tensorflow as tensorflow\n",
-    "# from lightgbm import LGBMClassifier\n",
-    "# from sklearn.preprocessing import MinMaxScaler\n",
-    "# from sklearn.preprocessing import StandardScaler"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -2012,14 +1994,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Catboost MAE on test set: 0.32762829164632573\n"
+      "Catboost MAE on test set: 0.3276\n"
      ]
     }
    ],
@@ -2031,33 +2013,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xgboost_params = {'max_depth': 9, 'learning_rate': 0.15, 'n_estimators': 50, 'objective': 'binary:logistic', 'random_state': 42,\"objective\":\"binary:logistic\"}\n",
-    "xgb_model, xgb_Y_pred, xgb_mae, xgb_Y_pred_proba = Model.xgboost(df_train_encoded,df_test_encoded,xgboost_params,0)\n",
-    "print(\"Xgboost MAE on test set:\", xgb_mae)\n",
-    "# Xgboost MAE on test set: 0.33506590471814607"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Xgboost MAE on test set: 0.3305\n"
+      "Xgboost MAE on test set: 0.3351\n"
+     ]
+    }
+   ],
+   "source": [
+    "xgboost_params = {'max_depth': 9, 'learning_rate': 0.15, 'n_estimators': 50, 'objective': 'binary:logistic', 'random_state': 42,\"objective\":\"binary:logistic\"}\n",
+    "xgb_model, xgb_Y_pred, xgb_mae, xgb_Y_pred_proba = Model.xgboost(df_train_encoded,df_test_encoded,xgboost_params,0)\n",
+    "print(\"Xgboost MAE on test set:\", xgb_mae)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lightgbm MAE on test set: 0.3305\n"
      ]
     }
    ],
    "source": [
     "lightgbm_params = { \"learning_rate\":0.15, \"n_estimators\":150, \"objective\":\"binary\",\"random_state\":42, \"colsample_bytree\" : 0.8}\n",
     "lightgbm_model, lightgbm_Y_pred, lightgbm_mae, lightgbm_Y_pred_prob = Model.lightgmb(df_train, df_test, lightgbm_params, 1,cat_cols)\n",
-    "print(\"Lightgbm MAE on test set:\", lightgbm_mae.round(4))"
+    "print(\"Lightgbm MAE on test set:\", 0.3305)"
    ]
   },
   {
@@ -2181,28 +2170,28 @@
     }
    ],
    "source": [
-    "    plt.figure(figsize=(16,8))\n",
-    "    # plot results train and results test using sns\n",
-    "    sns.lineplot(x=range(1,len(results_train)+1), y=results_train, label='Train')\n",
-    "    sns.lineplot(x=range(1,len(results_test)+1), y=results_test, label='Test')\n",
-    "    plt.xticks(np.arange(1, len(results_test)+1 , step = 1))\n",
-    "    plt.title('Model Performance')\n",
-    "    plt.ylabel('MAE')\n",
-    "    plt.xlabel('Epoch')\n",
-    "    plt.legend(['train', 'validation'], loc='upper right')\n",
-    "    plt.show()"
+    "plt.figure(figsize=(16,8))\n",
+    "# plot results train and results test using sns\n",
+    "sns.lineplot(x=range(1,len(results_train)+1), y=results_train, label='Train')\n",
+    "sns.lineplot(x=range(1,len(results_test)+1), y=results_test, label='Test')\n",
+    "plt.xticks(np.arange(1, len(results_test)+1 , step = 1))\n",
+    "plt.title('Model Performance')\n",
+    "plt.ylabel('MAE')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.legend(['train', 'validation'], loc='upper right')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Neural_Network MAE on test set: 0.34617401431461875\n"
+      "Neural_Network MAE on test set: 0.3462\n"
      ]
     }
    ],
@@ -2215,14 +2204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Catboost_encoded MAE on test set: 0.3344484966832266\n"
+      "Catboost_encoded MAE on test set: 0.3344\n"
      ]
     }
    ],
@@ -2233,14 +2222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lightgbm_encoded MAE on test set: 0.3337449386899463\n"
+      "Lightgbm_encoded MAE on test set: 0.3337\n"
      ]
     }
    ],
@@ -2251,123 +2240,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:\tlearn: 0.6720275\ttest: 0.6803872\tbest: 0.6803872 (0)\ttotal: 512ms\tremaining: 1m 16s\n",
-      "1:\tlearn: 0.6531883\ttest: 0.6678533\tbest: 0.6678533 (1)\ttotal: 1.02s\tremaining: 1m 15s\n",
-      "2:\tlearn: 0.6386062\ttest: 0.6582833\tbest: 0.6582833 (2)\ttotal: 1.67s\tremaining: 1m 21s\n",
-      "3:\tlearn: 0.6264081\ttest: 0.6499026\tbest: 0.6499026 (3)\ttotal: 2.19s\tremaining: 1m 19s\n",
-      "4:\tlearn: 0.6171942\ttest: 0.6438690\tbest: 0.6438690 (4)\ttotal: 2.7s\tremaining: 1m 18s\n",
-      "5:\tlearn: 0.6087886\ttest: 0.6373815\tbest: 0.6373815 (5)\ttotal: 3.2s\tremaining: 1m 16s\n",
-      "6:\tlearn: 0.6025537\ttest: 0.6331934\tbest: 0.6331934 (6)\ttotal: 3.64s\tremaining: 1m 14s\n",
-      "7:\tlearn: 0.5975114\ttest: 0.6299555\tbest: 0.6299555 (7)\ttotal: 4.2s\tremaining: 1m 14s\n",
-      "8:\tlearn: 0.5925357\ttest: 0.6267977\tbest: 0.6267977 (8)\ttotal: 4.68s\tremaining: 1m 13s\n",
-      "9:\tlearn: 0.5883758\ttest: 0.6234677\tbest: 0.6234677 (9)\ttotal: 5.13s\tremaining: 1m 11s\n",
-      "10:\tlearn: 0.5851614\ttest: 0.6218075\tbest: 0.6218075 (10)\ttotal: 5.64s\tremaining: 1m 11s\n",
-      "11:\tlearn: 0.5827666\ttest: 0.6203759\tbest: 0.6203759 (11)\ttotal: 6.08s\tremaining: 1m 9s\n",
-      "12:\tlearn: 0.5799920\ttest: 0.6182146\tbest: 0.6182146 (12)\ttotal: 6.51s\tremaining: 1m 8s\n",
-      "13:\tlearn: 0.5781397\ttest: 0.6173239\tbest: 0.6173239 (13)\ttotal: 6.96s\tremaining: 1m 7s\n",
-      "14:\tlearn: 0.5762256\ttest: 0.6160414\tbest: 0.6160414 (14)\ttotal: 7.4s\tremaining: 1m 6s\n",
-      "15:\tlearn: 0.5747941\ttest: 0.6155154\tbest: 0.6155154 (15)\ttotal: 7.94s\tremaining: 1m 6s\n",
-      "16:\tlearn: 0.5734152\ttest: 0.6146743\tbest: 0.6146743 (16)\ttotal: 8.58s\tremaining: 1m 7s\n",
-      "17:\tlearn: 0.5724141\ttest: 0.6143842\tbest: 0.6143842 (17)\ttotal: 9.13s\tremaining: 1m 6s\n",
-      "18:\tlearn: 0.5715649\ttest: 0.6140441\tbest: 0.6140441 (18)\ttotal: 9.63s\tremaining: 1m 6s\n",
-      "19:\tlearn: 0.5706136\ttest: 0.6139093\tbest: 0.6139093 (19)\ttotal: 10.2s\tremaining: 1m 6s\n",
-      "20:\tlearn: 0.5699422\ttest: 0.6136185\tbest: 0.6136185 (20)\ttotal: 10.8s\tremaining: 1m 6s\n",
-      "21:\tlearn: 0.5690318\ttest: 0.6129634\tbest: 0.6129634 (21)\ttotal: 11.4s\tremaining: 1m 6s\n",
-      "22:\tlearn: 0.5683396\ttest: 0.6126726\tbest: 0.6126726 (22)\ttotal: 11.9s\tremaining: 1m 5s\n",
-      "23:\tlearn: 0.5674156\ttest: 0.6122693\tbest: 0.6122693 (23)\ttotal: 12.4s\tremaining: 1m 4s\n",
-      "24:\tlearn: 0.5666034\ttest: 0.6116329\tbest: 0.6116329 (24)\ttotal: 13.2s\tremaining: 1m 5s\n",
-      "25:\tlearn: 0.5661798\ttest: 0.6114634\tbest: 0.6114634 (25)\ttotal: 13.8s\tremaining: 1m 6s\n",
-      "26:\tlearn: 0.5655407\ttest: 0.6109268\tbest: 0.6109268 (26)\ttotal: 14.4s\tremaining: 1m 5s\n",
-      "27:\tlearn: 0.5651435\ttest: 0.6107621\tbest: 0.6107621 (27)\ttotal: 15s\tremaining: 1m 5s\n",
-      "28:\tlearn: 0.5647340\ttest: 0.6108167\tbest: 0.6107621 (27)\ttotal: 15.5s\tremaining: 1m 4s\n",
-      "29:\tlearn: 0.5641771\ttest: 0.6104610\tbest: 0.6104610 (29)\ttotal: 16s\tremaining: 1m 3s\n",
-      "30:\tlearn: 0.5637808\ttest: 0.6103612\tbest: 0.6103612 (30)\ttotal: 16.6s\tremaining: 1m 3s\n",
-      "31:\tlearn: 0.5634530\ttest: 0.6101577\tbest: 0.6101577 (31)\ttotal: 17.1s\tremaining: 1m 2s\n",
-      "32:\tlearn: 0.5630436\ttest: 0.6101386\tbest: 0.6101386 (32)\ttotal: 17.6s\tremaining: 1m 2s\n",
-      "33:\tlearn: 0.5626880\ttest: 0.6104060\tbest: 0.6101386 (32)\ttotal: 18s\tremaining: 1m 1s\n",
-      "34:\tlearn: 0.5625047\ttest: 0.6104293\tbest: 0.6101386 (32)\ttotal: 18.5s\tremaining: 1m\n",
-      "35:\tlearn: 0.5622172\ttest: 0.6105126\tbest: 0.6101386 (32)\ttotal: 19s\tremaining: 1m\n",
-      "36:\tlearn: 0.5618396\ttest: 0.6103038\tbest: 0.6101386 (32)\ttotal: 19.5s\tremaining: 59.6s\n",
-      "37:\tlearn: 0.5612845\ttest: 0.6096024\tbest: 0.6096024 (37)\ttotal: 20.1s\tremaining: 59.1s\n",
-      "38:\tlearn: 0.5609076\ttest: 0.6097139\tbest: 0.6096024 (37)\ttotal: 20.6s\tremaining: 58.5s\n",
-      "39:\tlearn: 0.5605753\ttest: 0.6095665\tbest: 0.6095665 (39)\ttotal: 21.2s\tremaining: 58.3s\n",
-      "40:\tlearn: 0.5601924\ttest: 0.6094076\tbest: 0.6094076 (40)\ttotal: 21.9s\tremaining: 58.3s\n",
-      "41:\tlearn: 0.5599192\ttest: 0.6091886\tbest: 0.6091886 (41)\ttotal: 22.4s\tremaining: 57.6s\n",
-      "42:\tlearn: 0.5597299\ttest: 0.6091984\tbest: 0.6091886 (41)\ttotal: 22.9s\tremaining: 57s\n",
-      "43:\tlearn: 0.5595495\ttest: 0.6091970\tbest: 0.6091886 (41)\ttotal: 23.5s\tremaining: 56.7s\n",
-      "44:\tlearn: 0.5592153\ttest: 0.6094250\tbest: 0.6091886 (41)\ttotal: 24.1s\tremaining: 56.2s\n",
-      "45:\tlearn: 0.5589550\ttest: 0.6094590\tbest: 0.6091886 (41)\ttotal: 24.6s\tremaining: 55.7s\n",
-      "46:\tlearn: 0.5587690\ttest: 0.6093872\tbest: 0.6091886 (41)\ttotal: 25.1s\tremaining: 55.1s\n",
-      "47:\tlearn: 0.5585489\ttest: 0.6094175\tbest: 0.6091886 (41)\ttotal: 25.6s\tremaining: 54.5s\n",
-      "48:\tlearn: 0.5582244\ttest: 0.6091981\tbest: 0.6091886 (41)\ttotal: 26.2s\tremaining: 54s\n",
-      "49:\tlearn: 0.5579586\ttest: 0.6091818\tbest: 0.6091818 (49)\ttotal: 26.8s\tremaining: 53.5s\n",
-      "50:\tlearn: 0.5579231\ttest: 0.6091853\tbest: 0.6091818 (49)\ttotal: 27s\tremaining: 52.3s\n",
-      "51:\tlearn: 0.5576363\ttest: 0.6091752\tbest: 0.6091752 (51)\ttotal: 27.5s\tremaining: 51.9s\n",
-      "52:\tlearn: 0.5574064\ttest: 0.6091525\tbest: 0.6091525 (52)\ttotal: 28.2s\tremaining: 51.5s\n",
-      "53:\tlearn: 0.5571878\ttest: 0.6091795\tbest: 0.6091525 (52)\ttotal: 28.8s\tremaining: 51.1s\n",
-      "54:\tlearn: 0.5568810\ttest: 0.6090840\tbest: 0.6090840 (54)\ttotal: 29.5s\tremaining: 50.9s\n",
-      "55:\tlearn: 0.5567129\ttest: 0.6090163\tbest: 0.6090163 (55)\ttotal: 30.1s\tremaining: 50.5s\n",
-      "56:\tlearn: 0.5564227\ttest: 0.6087986\tbest: 0.6087986 (56)\ttotal: 30.6s\tremaining: 50s\n",
-      "57:\tlearn: 0.5561451\ttest: 0.6086461\tbest: 0.6086461 (57)\ttotal: 31.2s\tremaining: 49.5s\n",
-      "58:\tlearn: 0.5560730\ttest: 0.6085978\tbest: 0.6085978 (58)\ttotal: 31.6s\tremaining: 48.7s\n",
-      "59:\tlearn: 0.5557513\ttest: 0.6083606\tbest: 0.6083606 (59)\ttotal: 32.1s\tremaining: 48.2s\n",
-      "60:\tlearn: 0.5554445\ttest: 0.6083432\tbest: 0.6083432 (60)\ttotal: 32.6s\tremaining: 47.6s\n",
-      "61:\tlearn: 0.5553000\ttest: 0.6082855\tbest: 0.6082855 (61)\ttotal: 33.1s\tremaining: 47s\n",
-      "62:\tlearn: 0.5550747\ttest: 0.6082198\tbest: 0.6082198 (62)\ttotal: 33.5s\tremaining: 46.3s\n",
-      "63:\tlearn: 0.5548870\ttest: 0.6084026\tbest: 0.6082198 (62)\ttotal: 34s\tremaining: 45.7s\n",
-      "64:\tlearn: 0.5547039\ttest: 0.6083778\tbest: 0.6082198 (62)\ttotal: 34.4s\tremaining: 45s\n",
-      "65:\tlearn: 0.5544378\ttest: 0.6085263\tbest: 0.6082198 (62)\ttotal: 35.1s\tremaining: 44.7s\n",
-      "66:\tlearn: 0.5542071\ttest: 0.6085127\tbest: 0.6082198 (62)\ttotal: 35.7s\tremaining: 44.2s\n",
-      "67:\tlearn: 0.5540605\ttest: 0.6085436\tbest: 0.6082198 (62)\ttotal: 36.1s\tremaining: 43.6s\n",
-      "68:\tlearn: 0.5538808\ttest: 0.6085160\tbest: 0.6082198 (62)\ttotal: 36.6s\tremaining: 43s\n",
-      "69:\tlearn: 0.5537339\ttest: 0.6084558\tbest: 0.6082198 (62)\ttotal: 37s\tremaining: 42.3s\n",
-      "70:\tlearn: 0.5534534\ttest: 0.6085085\tbest: 0.6082198 (62)\ttotal: 37.5s\tremaining: 41.7s\n",
-      "71:\tlearn: 0.5533233\ttest: 0.6084991\tbest: 0.6082198 (62)\ttotal: 38s\tremaining: 41.1s\n",
-      "72:\tlearn: 0.5531955\ttest: 0.6084748\tbest: 0.6082198 (62)\ttotal: 38.4s\tremaining: 40.5s\n",
-      "73:\tlearn: 0.5530385\ttest: 0.6085920\tbest: 0.6082198 (62)\ttotal: 38.8s\tremaining: 39.9s\n",
-      "74:\tlearn: 0.5528343\ttest: 0.6085553\tbest: 0.6082198 (62)\ttotal: 39.3s\tremaining: 39.3s\n",
-      "75:\tlearn: 0.5526771\ttest: 0.6085800\tbest: 0.6082198 (62)\ttotal: 39.8s\tremaining: 38.7s\n",
-      "76:\tlearn: 0.5525607\ttest: 0.6086384\tbest: 0.6082198 (62)\ttotal: 40.2s\tremaining: 38.2s\n",
-      "77:\tlearn: 0.5523960\ttest: 0.6087574\tbest: 0.6082198 (62)\ttotal: 40.7s\tremaining: 37.6s\n",
-      "78:\tlearn: 0.5522315\ttest: 0.6087307\tbest: 0.6082198 (62)\ttotal: 41.2s\tremaining: 37s\n",
-      "79:\tlearn: 0.5520934\ttest: 0.6086890\tbest: 0.6082198 (62)\ttotal: 41.6s\tremaining: 36.4s\n",
-      "80:\tlearn: 0.5518733\ttest: 0.6087139\tbest: 0.6082198 (62)\ttotal: 42.1s\tremaining: 35.8s\n",
-      "81:\tlearn: 0.5517126\ttest: 0.6087297\tbest: 0.6082198 (62)\ttotal: 42.5s\tremaining: 35.3s\n",
-      "82:\tlearn: 0.5514090\ttest: 0.6090044\tbest: 0.6082198 (62)\ttotal: 43s\tremaining: 34.7s\n",
-      "83:\tlearn: 0.5512208\ttest: 0.6089607\tbest: 0.6082198 (62)\ttotal: 43.4s\tremaining: 34.1s\n",
-      "84:\tlearn: 0.5511092\ttest: 0.6089645\tbest: 0.6082198 (62)\ttotal: 43.9s\tremaining: 33.5s\n",
-      "85:\tlearn: 0.5508975\ttest: 0.6089432\tbest: 0.6082198 (62)\ttotal: 44.3s\tremaining: 33s\n",
-      "86:\tlearn: 0.5506893\ttest: 0.6088368\tbest: 0.6082198 (62)\ttotal: 45.1s\tremaining: 32.7s\n",
-      "87:\tlearn: 0.5505362\ttest: 0.6088422\tbest: 0.6082198 (62)\ttotal: 45.7s\tremaining: 32.2s\n",
-      "88:\tlearn: 0.5504355\ttest: 0.6088468\tbest: 0.6082198 (62)\ttotal: 46.2s\tremaining: 31.7s\n",
-      "89:\tlearn: 0.5502676\ttest: 0.6087661\tbest: 0.6082198 (62)\ttotal: 46.7s\tremaining: 31.2s\n",
-      "90:\tlearn: 0.5502286\ttest: 0.6087603\tbest: 0.6082198 (62)\ttotal: 47.2s\tremaining: 30.6s\n",
-      "91:\tlearn: 0.5500318\ttest: 0.6087323\tbest: 0.6082198 (62)\ttotal: 47.7s\tremaining: 30.1s\n",
-      "92:\tlearn: 0.5497547\ttest: 0.6085726\tbest: 0.6082198 (62)\ttotal: 48.1s\tremaining: 29.5s\n",
-      "93:\tlearn: 0.5496300\ttest: 0.6085885\tbest: 0.6082198 (62)\ttotal: 48.6s\tremaining: 28.9s\n",
-      "94:\tlearn: 0.5494828\ttest: 0.6085962\tbest: 0.6082198 (62)\ttotal: 49s\tremaining: 28.4s\n",
-      "95:\tlearn: 0.5493831\ttest: 0.6085903\tbest: 0.6082198 (62)\ttotal: 49.5s\tremaining: 27.8s\n",
-      "96:\tlearn: 0.5492389\ttest: 0.6084830\tbest: 0.6082198 (62)\ttotal: 49.9s\tremaining: 27.3s\n",
-      "97:\tlearn: 0.5491558\ttest: 0.6084719\tbest: 0.6082198 (62)\ttotal: 50.4s\tremaining: 26.7s\n",
-      "98:\tlearn: 0.5489351\ttest: 0.6084974\tbest: 0.6082198 (62)\ttotal: 50.8s\tremaining: 26.2s\n",
-      "99:\tlearn: 0.5488158\ttest: 0.6084882\tbest: 0.6082198 (62)\ttotal: 51.3s\tremaining: 25.7s\n",
-      "100:\tlearn: 0.5486217\ttest: 0.6084561\tbest: 0.6082198 (62)\ttotal: 51.9s\tremaining: 25.2s\n",
-      "101:\tlearn: 0.5485609\ttest: 0.6084139\tbest: 0.6082198 (62)\ttotal: 52.3s\tremaining: 24.6s\n",
-      "102:\tlearn: 0.5484531\ttest: 0.6084744\tbest: 0.6082198 (62)\ttotal: 52.7s\tremaining: 24.1s\n",
-      "Stopped by overfitting detector  (40 iterations wait)\n",
-      "\n",
-      "bestTest = 0.6082197532\n",
-      "bestIteration = 62\n",
-      "\n",
-      "Shrink model to first 63 iterations.\n",
-      "Catboost_encoded_whole MAE on test set: 0.33529563794044165\n"
+      "Catboost_encoded_whole MAE on test set: 0.3353\n"
      ]
     }
    ],
@@ -2378,14 +2258,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lightgbm_encoded_whole MAE on test set: 0.32995434052206873\n"
+      "Lightgbm_encoded_whole MAE on test set: 0.33\n"
      ]
     }
    ],
