--- a/4. Encoding.ipynb
+++ b/4. Encoding.ipynb
@@ -34,28 +34,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from xgboost import XGBClassifier\n",
-    "# from sklearn.metrics import roc_auc_score\n",
-    "# from sklearn.metrics import mean_absolute_error\n",
-    "# from catboost import CatBoostClassifier, Pool\n",
-    "# from keras.models import Sequential\n",
-    "# from keras.layers import Dense, Activation, Dropout\n",
-    "# import tensorflow as tensorflow\n",
-    "# from lightgbm import LGBMClassifier\n",
-    "# from sklearn.preprocessing import StandardScaler"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### **5 Additional Features**\n",
-    "We will add some additional features to our model in order to improve its performance."
+    "We will add some additional features to our dataframe in order to improve the performance of our models."
    ]
   },
   {
@@ -1046,31 +1029,6 @@
     "low_cardinality_cat_cols = [\"size\",\"item_color\",\"user_title\",\"user_state\"]\n",
     "high_cardinality_cat_cols = [\"item_id\",\"brand_id\",\"user_id\"]\n",
     "cat_cols = low_cardinality_cat_cols + high_cardinality_cat_cols"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get the real class predictions for the test set\n",
-    "# real_class = pd.read_csv(\"orders_realclass.txt\", delimiter=\";\")\n",
-    "# real_class = real_class.astype({\"orderItemID\":int,\"returnShipment\":int})\n",
-    "# df_valid.reset_index(drop=True,inplace=True)\n",
-    "# df_valid[\"return\"] = real_class[\"returnShipment\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Combine the training and former testing sets into one dataframe\n",
-    "# df_train_new = pd.concat([df_train,df_test],axis=0)\n",
-    "# # Encoding the categorical variables\n",
-    "# df_train_encoded, df_test_encoded, encoder = encode_categorical_columns(df_train_new,df_valid,cat_cols,0.1)"
    ]
   },
   {
