--- a/4. Encoding.ipynb
+++ b/4. Encoding.ipynb
@@ -1032,19 +1032,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **Additional Features**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get number of unique values in a column\n",
+    "# Get the number of unique values for each order_id \n",
     "list_include = [\"item_id\",\"size\",\"order_id\",\"brand_id\",\"item_color\"]\n",
     "column_name= {\"item_id\":\"order_item_id_nunique\",\"size\":\"order_size_nunique\",\"brand_id\":\"order_brand_id_nunique\",\"item_color\":\"order_item_color_nunique\"}\n",
     "df_group = df[list_include].groupby([\"order_id\"]).agg({\"item_id\":\"nunique\",\"size\":\"nunique\",\"brand_id\":\"nunique\",\"item_color\":\"nunique\"}).reset_index().rename(columns= column_name)\n",
@@ -1057,7 +1050,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Same item_id different colors, sizes\n",
+    "# Get the count of same item_id different colors, sizes\n",
     "df_group = df[list_include].groupby([\"order_id\",\"item_id\"]).agg({\"item_color\":\"nunique\",\"size\":\"nunique\"}).reset_index().rename(columns= {\"item_color\":\"order_item_id_color_nunique\",\"size\":\"order_item_id_size_nunique\"})\n",
     "df = df.merge(df_group,on=[\"order_id\",\"item_id\"],how=\"left\")"
    ]
@@ -1068,9 +1061,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Same brand_id different colors, sizes, item_id\n",
+    "# Get the count of same brand_id different colors, sizes, item_id\n",
     "df_group = df[list_include].groupby([\"order_id\",\"brand_id\"]).agg({\"item_color\":\"nunique\",\"size\":\"nunique\",\"item_id\":\"nunique\"}).reset_index().rename(columns= {\"item_color\":\"order_brand_id_color_nunique\",\"size\":\"order_brand_id_size_nunique\",\"item_id\":\"order_brand_id_item_id_nunique\"})\n",
     "df = df.merge(df_group,on=[\"order_id\",\"brand_id\"],how=\"left\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# summary statistics to do the aggregation\n",
+    "stats_to_agg = [\"mean\",\"std\",\"min\",\"max\",\"sum\",\"count\",\"median\",\"mad\"]"
    ]
   },
   {
@@ -1079,8 +1082,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stats_to_agg = [\"mean\",\"std\",\"min\",\"max\",\"sum\",\"count\",\"median\",\"mad\"]\n",
-    "# Item id price statistics\n",
+    "# item_id price statistics\n",
     "df_group = df[[\"item_id\",\"item_price\"]].groupby([\"item_id\"]).agg(stats_to_agg).reset_index().round(2)\n",
     "df_group.columns = ['_item_id_'.join(col) for col in df_group.columns]\n",
     "df_group.rename(columns= {\"item_id_item_id_\":\"item_id\"},inplace=True)\n",
@@ -1096,7 +1098,6 @@
    "source": [
     "# user_id price statistics\n",
     "df_group = df[[\"user_id\",\"item_price\"]].groupby([\"user_id\"]).agg(stats_to_agg).reset_index().round(2)\n",
-    "# df_group.columns = ['_'.join(col) for col in df_group.columns]\n",
     "df_group.columns = ['_user_id_'.join(col) for col in df_group.columns]\n",
     "df_group.rename(columns= {\"user_id_user_id_\":\"user_id\"},inplace=True)\n",
     "df_group.fillna(0,inplace=True)\n",
@@ -6014,6 +6015,13 @@
     "model_results_1.index.set_names([\"Model\"],inplace=True)\n",
     "model_results_1.reset_index(inplace=True)\n",
     "model_results_1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Results after the additional features have been added."
    ]
   },
   {
