--- a/4. Encoding.ipynb
+++ b/4. Encoding.ipynb
@@ -11,14 +11,7 @@
     "from category_encoders import LeaveOneOutEncoder,WOEEncoder\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "sns.set_theme(palette = \"Dark2\")\n",
-    "my_colors = [(0.10588235294117647, 0.6196078431372549, 0.4666666666666667),\n",
-    "  (0.8509803921568627, 0.37254901960784315, 0.00784313725490196)]\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "from itertools import chain, combinations\n",
-    "import math\n"
+    "pd.set_option('display.max_columns', None)\n"
    ]
   },
   {
