--- a/5. Recent_+_Interaction.ipynb
+++ b/5. Recent_+_Interaction.ipynb
@@ -125,16 +125,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# How to shift the date\n",
-    "# df_group[['A', 'B', 'C']] = df_gr.groupby('Name')['A', 'B', 'C'].shift(1)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -11531,7 +11521,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Through the feature engineering in this notebook, we managed to increase the performance of our **Catboost** models on the test set by **0.0166** in terms of MAE and the performance of the xgboost model by **0.0137**. The GPU variation of the Catboost algorithm is the best-performing model on the test set with an MAE of **0.3025**** Therefor we will be using this model for the final predictions."
+    "Through the feature engineering in this notebook, we managed to increase the performance of our **CatBoost** models on the test set by **0.0166** in terms of MAE and the performance of the XGBoost model by **0.0137**. The GPU variation of the CatBoost algorithm is the best-performing model on the test set with an MAE of **0.3025** Therefore we will be using this model for the final predictions."
    ]
   },
   {
